# lale

./: .codecov.yml  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .yamllint  All_the_aif360_metrics_for_lale_library_comparisons_LR_PR_AiX360.ipynb  CONTRIBUTING.md  Dockerfile  Makefile  README-cn.md  README.md  bandit.yaml  mypy.ini  pylintrc  pyproject.toml  pyrightconfig.json  setup.py  test_aix360.py
docs/: Makefile  README-cn.md  README-de.md  README-fa.md  README-fr.md  conf.py  faq.rst  index.rst  installation.md  installation.rst  new_operators.md  papers.rst  requirements.txt
examples/: README.md  demo_aif360.ipynb  demo_aif360_more.ipynb  demo_aix360.ipynb  demo_auto_pipeline.ipynb  demo_batching.ipynb  demo_column_transformer.ipynb  demo_dynamic_schemas.ipynb  demo_fairness_datasets.ipynb  demo_grammars.ipynb  demo_help_and_errors.ipynb  demo_hyperparam_tuning.ipynb  demo_imbalanced_learn.ipynb  demo_lifecycle_states.ipynb  demo_multi_table.ipynb  demo_pipeline_crossval.ipynb  demo_pipeline_dags.ipynb  demo_pipeline_hyperopt.ipynb  demo_schemas_datasets.ipynb  demo_task_graphs.ipynb  demo_text_and_structured.ipynb  demo_text_classification.ipynb  demo_top_k_voting_classifier.ipynb  docs_guide_for_sklearn_users.ipynb  docs_new_operators.ipynb  docs_new_operators_schemas_api.ipynb  talk_2019-0327-lale.ipynb  talk_2019-0425-lale.ipynb  talk_2019-1105-lale.ipynb  talk_2019-1208-lale.ipynb  talk_2020-0124-lale.ipynb  talk_2020-0302-lale.ipynb  talk_2020-0327-lale.ipynb  talk_2020-0712-lale.ipynb  test_autoai_sdk.ipynb
lale/: __init__.py  docstrings.py  eval_pandas_df.py  eval_spark_df.py  expressions.py  grammar.py  helpers.py  hyperopt_example.py  json_operator.py  operator_wrapper.py  operators.py  pretty_print.py  schema2enums.py  schema_ranges.py  schema_simplifier.py  schema_utils.py  schemas.py  settings.py  sklearn_compat.py  type_checking.py  visualize.py
lale.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
talks/: 2019-0529-lale.pptx  2019-1105-lale.pptx  2019-1208-lale.pptx  2019-1209-lale-ibm-pl-day.pptx  2020-0409-lale.pptx  2020-0712-lale.pptx  2022-0816-lale.pptx  fairness_patterns.pptx  operator_classes.pptx  repositories.pptx  terminology.pptx
test/: __init__.py  lale-pgo-example.json  mock_custom_operators.py  mock_module.py  test.py  test_aif360.py  test_aif360_ensembles.py  test_aix360.py  test_autoai_libs.py  test_autoai_output_consumption.py  test_autoai_ts_libs.py  test_autogen_lib.py  test_category_encoders.py  test_core_classifiers.py  test_core_misc.py  test_core_operators.py  test_core_operators_classifiers.py  test_core_operators_regressors.py  test_core_pipeline.py  test_core_regressors.py  test_core_transformers.py  test_custom_operators.py  test_custom_schemas.py  test_grammar.py  test_halving_gridsearchcv.py  test_interoperability.py  test_json_pretty_viz.py  test_lale_contract.py  test_notebooks.py  (+16 more)
(+522 files in other folders)
