[build-system]
requires = ["setuptools>=61.0,<82.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lale"
description = "Library for Semi-Automated Data Science"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache License 2.0" }
authors = [
  { name = "Guillaume Baudart" },
  { name = "Martin Hirzel" },
  { name = "Kiran Kate" },
  { name = "Parikshit Ram" },
  { name = "Avraham Shinnar" },
]
maintainers = [{ name = "Avraham Shinnar" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]

dependencies = [
  "numpy",
  "black>=22.1.0",
  "setuptools>=61.0,<82.0",
  "hyperopt>=0.2,<=0.2.7",
  "jsonschema<=5",
  "jsonsubschema>=0.0.6",
  "scikit-learn>=1.0.0,<1.8.0",
  "scipy",
  "pandas",
  "packaging",
  "decorator",
  "typing-extensions",
]

[project.urls]
Homepage = "https://github.com/IBM/lale"

[project.optional-dependencies]
full = [
  "mystic",
  "graphviz",
  "xgboost<3.4.0",
  "lightgbm<4.7.0",
  "snapml>=1.7.0rc3,<1.18.0",
  "liac-arff>=2.4.0",
  "tensorflow>=2.4.0",
  "numba",
  "aif360>=0.5.0",
  "torch>=1.0",
  "BlackBoxAuditing",
  "imbalanced-learn",
  "cvxpy>=1.0",
  "fairlearn",
  "h5py",
]
dev = ["pre-commit"]
test = [
  "mystic",
  "joblib",
  "ipython<8.8.0",
  "jupyter",
  "graphviz",
  "lxml<5.2.0",
  "sphinx>=5.0.0",
  "sphinx_rtd_theme>=0.5.2",
  "docutils<0.17",
  "m2r2",
  "sphinxcontrib.apidoc",
  "sphinxcontrib-svg2pdfconverter",
  "pytest",
  "pyspark<4.0.0",
  "func_timeout",
  "category-encoders",
  "pynisher==0.6.4",
]
fairness = [
  "mystic",
  "liac-arff>=2.4.0",
  "aif360>=0.5.0",
  "imbalanced-learn",
  "BlackBoxAuditing",
]
autoai-fairness = [
  "dill<=0.3.8",
  "mystic<=0.3.9",
  "klepto<=0.2.2",
  "liac-arff>=2.4.0",
  "aif360>=0.5.0",
  "imbalanced-learn",
  "BlackBoxAuditing",
]
tutorial = [
  "ipython<8.8.0",
  "jupyter",
  "graphviz",
  "xgboost<3.1.0",
  "imbalanced-learn",
  "liac-arff>=2.4.0",
  "aif360>=0.5.0",
  "BlackBoxAuditing",
  "typing-extensions",
  "pandas",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["lale*"]

[tool.setuptools.package-data]
lale = ["py.typed"]
